--- a/package.json
+++ b/package.json
@@ -1,20 +1,23 @@
 {
-  "name": "nextjs-lottery",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "next": "12.2.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
-  },
-  "devDependencies": {
-    "eslint": "8.20.0",
-    "eslint-config-next": "12.2.2"
-  }
+    "name": "nextjs-lottery",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "moralis": "^1.9.1",
+        "next": "12.2.2",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-moralis": "^1.4.0",
+        "web3uikit": "^0.1.163"
+    },
+    "devDependencies": {
+        "eslint": "8.20.0",
+        "eslint-config-next": "12.2.2"
+    }
 }
